# zk-tlsn-example

./: .gitignore  .gitmodules  .justfile  .rustfmt.toml  CLAUDE.md  Cargo.toml  README.md
circuit/: Nargo.toml  Prover.toml
circuit/src/: main.nr
contracts/: .gitmodules
contracts/script/: Deploy.s.sol
contracts/src/: MerkleTreeLibrary.sol  MockERC20.sol  PrivacyPool.sol
contracts/test/: PrivacyPoolWithdraw.t.sol
examples/: Cargo.toml
examples/src/: common_rpc.rs  lib.rs
examples/src/e2e_offers/: chain.rs  config.rs  mod.rs
examples/src/e2e_withdraw/: chain.rs  mod.rs  tlsn.rs
parser/: Cargo.toml
parser/src/: common.rs  error.rs  lib.rs  message.rs  path.rs  range.rs  ranged.rs  search.rs  tests.rs  traits.rs  traversal.rs  types.rs
parser/src/grammar/: common.rs  mod.rs  request.pest  request.rs  response.pest  response.rs
parser/src/grammar/redacted/: mod.rs  request.pest  request.rs  response.pest  response.rs
parser/src/grammar/standard/: mod.rs  request.rs  response.rs
parser/src/redacted/: mod.rs  request.pest  request.rs  response.pest  response.rs  tests.rs  traversal.rs  types.rs
parser/src/standard/: mod.rs  request.pest  request.rs  response.pest  response.rs  tests.rs  traversal.rs  types.rs
parser/src/types/: http.rs  mod.rs  ranged.rs
parser/tests/: request_tests.rs  response_tests.rs  search_tests.rs
server/: Cargo.toml
server/src/: app.rs  client.rs  executor.rs  handler.rs  lib.rs  server.rs
shared/: Cargo.toml  README.md
shared/src/: errors.rs  executor.rs  lib.rs  logging.rs  quic.rs  testing.rs  tls.rs
stwo-circuit/: Cargo.toml
stwo-circuit/examples/: blake_onchain_verify.rs  commitment.rs  test_combined_withdraw.rs  test_e2e_server_withdraw.rs
stwo-circuit/examples/e2e/: chain.rs  main.rs  tlsn.rs
stwo-circuit/examples/e2e_offers/: chain.rs  config.rs  main.rs
stwo-circuit/src/: combined_circuit.rs  lib.rs  main.rs  offchain_merkle.rs  offer_circuit.rs  onchain.rs  onchain_blake.rs  poseidon_hash.rs
stwo-circuit/src/blake3/: air.rs  blake3.rs  mod.rs  preprocessed_columns.rs  test_our_blake3.rs
stwo-circuit/src/blake3/round/: constraints.rs  generate.rs  mod.rs
stwo-circuit/src/blake3/scheduler/: constraints.rs  generate.rs  mod.rs
stwo-circuit/src/blake3/xor_table/: generate.rs  mod.rs
stwo-circuit/src/merkle_membership/: eval.rs  logup.rs  mod.rs  trace.rs  types.rs
stwo-circuit/src/poseidon_chain/: eval.rs  logup.rs  mod.rs  trace.rs  types.rs
stwo-circuit/src/privacy_pool/: mod.rs  poseidon_hash.rs  relations.rs
stwo-circuit/src/privacy_pool/merkle_membership/: eval.rs  logup.rs  mod.rs  trace.rs  types.rs
stwo-circuit/src/privacy_pool/onchain/: build.rs  convert.rs  mod.rs  rpc.rs  types.rs
stwo-circuit/src/privacy_pool/poseidon_chain/: eval.rs  logup.rs  mod.rs  trace.rs  types.rs
stwo-circuit/src/privacy_pool/scheduler/: eval.rs  logup.rs  mod.rs  trace.rs  types.rs
stwo-circuit/src/proof/: mod.rs  prove.rs  types.rs  verify.rs
stwo-circuit/src/scheduler/: eval.rs  logup.rs  mod.rs  trace.rs  types.rs
stwo-circuit/tests/: commitment.rs
tlsnotary/: Cargo.toml
tlsnotary/src/: error.rs  lib.rs  tests.rs  transcript.rs
tlsnotary/src/prover/: mod.rs  reveal.rs
tlsnotary/src/verifier/: mod.rs  validator.rs
verifier/: Cargo.toml
verifier/examples/: client.rs  server.rs
verifier/src/: errors.rs  handler.rs  lib.rs  notarization.rs  protocol.rs  session.rs  stream.rs  verification.rs
zktlsn/: Cargo.toml
zktlsn/examples/: prover.rs  server.rs  verifier.rs
zktlsn/src/: commitment.rs  error.rs  lib.rs  padding.rs  prover.rs  tests.rs  verifier.rs
zktlsnotary/: Cargo.toml
zktlsnotary/src/: error.rs  lib.rs
zktlsnotary/src/prover/: mod.rs  reveal.rs
zktlsnotary/src/verifier/: mod.rs
