[workspace]
resolver = "3"
members = ["server", "shared", "zktlsnotary"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
async-compat = "0.2.5"
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = "1.8.1"
hyper-util = { version = "0.1.18", features = [
    "tokio",
    "server",
    "server-auto",
    "client",
    "client-legacy",
    "http2",
] }
rcgen = "0.14.5"
rustls = "0.23.35"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
server = { path = "./server" }
shared = { path = "./shared" }
smol = "2.0.2"
thiserror = "2.0.17"
tlsn = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.13" }
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.4"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tower-service = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
webpki-roots = "1.0.4"
zktlsnotary = { path = "./zktlsnotary" }
