[workspace]
resolver = "3"
members = ["parser", "server", "shared", "zktlsnotary"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
async-compat = "0.2.5"
axum = "0.8.7"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
futures-rustls = "0.26.0"
http-body-util = "0.1.3"
hyper = "1.8.1"
hyper-util = { version = "0.1.18", features = ["client", "http2"] }
pest = "2.8.3"
pest_derive = "2.8.3"
rcgen = "0.14.5"
rustls = "0.23.35"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
server = { path = "./server" }
shared = { path = "./shared" }
smol = "2.0.2"
thiserror = "2.0.17"
tlsn = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.13" }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
zktlsnotary = { path = "./zktlsnotary" }
