[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
futures.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tower.workspace = true
tower-service.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
