[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
async-compat.workspace = true
axum.workspace = true
futures.workspace = true
futures-rustls.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
parser = { path = "../parser" }
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
smol.workspace = true
thiserror.workspace = true
tower.workspace = true
tracing.workspace = true
