[package]
name = "stwo-circuit"
version.workspace = true
edition.workspace = true

[dependencies]
itertools.workspace = true
num-traits.workspace = true
serde.workspace = true
stwo-constraint-framework.workspace = true
stwo.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
