[package]
name = "stwo-circuit"
version.workspace = true
edition.workspace = true

[dependencies]
alloy.workspace = true
async-compat.workspace = true
itertools.workspace = true
num-traits.workspace = true
serde.workspace = true
stwo-constraint-framework.workspace = true
stwo-polynomial.workspace = true
stwo.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenvy.workspace = true

[dev-dependencies]
axum.workspace = true
futures.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
quinn.workspace = true
serde_json.workspace = true
shared.workspace = true
smol.workspace = true
tlsnotary.workspace = true
tokio = { workspace = true, features = ["io-util", "time"] }
zkhash = { git = "https://github.com/AntoineFONDEUR/poseidon2.git", branch = "poseidon2-M31" }
