[package]
name = "zktlsn"
version.workspace = true
edition.workspace = true

[dependencies]
stwo-circuit = { path = "../stwo-circuit" }
stwo.workspace = true
parser.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tlsnotary.workspace = true
tracing.workspace = true

[dev-dependencies]
async-compat.workspace = true
axum.workspace = true
chrono.workspace = true
futures.workspace = true
futures-rustls.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
quinn.workspace = true
rustls.workspace = true
server.workspace = true
shared.workspace = true
smol.workspace = true
tokio.workspace = true
tower.workspace = true
tracing-subscriber.workspace = true
verifier.workspace = true
